<resources>
    <string name="app_name">Devon Project</string>
    <string name="my_project">My Project</string>
    <string name="final_semester">Final Semester</string>
    <string name="trailer_hire">TRAILER HIRE</string>
    <string name="pay_calculater">PAY CALCULATER</string>
    <string name="my_option">MY OPTION</string>
    <string name="trailer_hire_calculator">Trailer Hire Calculator</string>
    <string name="enter_the_cost_per_km">Enter the cost per KM:</string>
    <string name="e_g_8.00">e.g. 8.00</string>
    <string name="enter_the_amount_of_kilometers_travelled">Enter the amount of kilometers travelled:</string>
    <string name="e_g_36">e.g. 36</string>
    <string name="calculate_costs">Calculate Costs</string>
    <string name="enter_amount_in_dollars">Enter amount in dollars ($)</string>
    <string name="currency_converter_r">Currency converter $ - R</string>
    <string name="convert">Convert</string>
    <string name="amount_due_for_distance_travelled">Amount due for distance travelled:</string>
    <string name="_0_00">0.00</string>
    <string name="_0_00_">0.00</string>
    <string name="r300_daily_fee">+ R300 daily fee</string>
    <string name="total_amount_due">Total amount due:</string>
    <string name="travelled_less_than_40km">Travelled less than 40km</string>
    <string name="textview">TextView</string>
    <string name="convertimage">convertImage</string>
    <string name="pay_calculator">Pay Calculator</string>
    <string name="enter_the_amount_of_hours_worked">Enter the amount of hours worked:</string>
    <string name="txtNumber">$</string>
    <string name="enter_you_houlry_rate_in_rands">Enter you houlry rate in rands:</string>
    <string name="r0_00">R0.00</string>
    <string name="enter_your_hourly_rate_in_rands">Enter your hourly rate in rands:</string>
    <string name="new_hourly_rate">New Hourly Rate</string>
    <string name="calculate">Calculate</string>
    <string name="days_used">Days Used:</string>
</resources>
